--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,19 @@
 
 
+<div class="row container mt-4">
 
-<h1>Hola mundo</h1>
+  <div class="col-3">
+    <h2>Búsquedas</h2>
+      <hr />
+      <ul class="list-group">
+        <li class="list-group-item">Buscr país</li>
+        <li class="list-group-item">Por región</li>
+        <li class="list-group-item">Por capital</li>
+      </ul>  
+  </div>
+
+  <div class="col">
+    <router-outlet></router-outlet>
+  </div>
+
+</div>
