--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,13 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <form (ngSubmit)="buscar()" autocomplete="off">
-      <input type="text"
-            name="termino"
-            class="form-control"
-            [(ngModel)]="termino"
-            placeholder="Buscar por país">
-    </form>
+    <app-pais-input></app-pais-input>
   </div>
 </div>
 
@@ -20,31 +14,10 @@
       No se encontró nada con el término {{ termino}}
   </div>
 
-<div *ngIf="!hayError" class="row">
+<div *ngIf="paises.length > 0" class="row">
   <div class="col">
 
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th> # </th>
-          <th> Bandera</th>
-          <th> Nombre </th>
-          <th> Población </th>
-          <th>  </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td> 1 </td>
-          <td> Bandera </td>
-          <td> Nombre </td>
-          <td> 12345 </td>
-          <td> 
-            <a href="/pais/cri">Ver...</a>  
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <app-pais-tabla [paises] = "paises"></app-pais-tabla>
 
   </div>
 </div>
