chore: work with params in route to show country

--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -3,5 +3,6 @@
         name="termino"
         class="form-control"
         [(ngModel)]="termino"
-        placeholder="Buscar por país">
+        (input)="teclaPresionada()"
+        [placeholder]="placeholder">
 </form>
