--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -5,6 +5,7 @@
   <div class="col">
     <app-pais-input
       (onEnter)="buscar( $event )"
+      placeholder="Buscar país..."
       >
     </app-pais-input>
   </div>
