fet: create list suggestion

--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <pre class="mt-5">
+  <!-- <pre class="mt-5">
     {{ pais | json }}
-  </pre>
+  </pre> -->
 </ng-template>
