--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,17 +1,21 @@
-<h2>Por Capital</h2>
-<hr/>
+<div class="animate__animated animate__fadeIn animate-fast">
 
-<div class="row">
-  <div class="col">
-    <app-pais-input
-      (onEnter)="buscar( $event )"
-      placeholder="Buscar capital..."
-      >
-    </app-pais-input>
+  <h2>Por Capital</h2>
+  <hr/>
+  
+  <div class="row">
+    <div class="col">
+      <app-pais-input
+        (onEnter)="buscar( $event )"
+        placeholder="Buscar capital..."
+        >
+      </app-pais-input>
+    </div>
   </div>
-</div>
 
 <hr/>
+
+</div>
 
 <div *ngIf="hayError"
       class="alert alert-danger">
