--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,33 @@
-<p>por-region works!</p>
+<div class="animate__animated animate__fadeIn animate-fast">
+  <h3>Buscar por Región <small> {{ regionActiva | titlecase}} </small></h3>
+  <hr>
+  
+  <h5>Seleccione la región</h5>
+  
+  <div class="row">
+    <div class="col">
+  
+      <!-- [class.btn-primary]="region === regionActiva" -->
+      <!-- [ngClass]="{
+        'btn-primary : regionActiva === region'
+        'btn-primary : regionActiva !== region'
+      }" -->
+  
+      <button *ngFor="let region of regiones"
+              class="ms-1"
+              [class]="getClassCSS(region)"
+              (click)="activarRegion(region); buscarRegion(region)"
+              >
+        {{ region | titlecase }}
+      </button>
+    </div>
+  </div>
+</div>
+
+<div *ngIf="paises.length > 0" class="row">
+  <div class="col">
+
+    <app-pais-tabla [paises] = "paises"></app-pais-tabla>
+
+  </div>
+</div>
